Remove bc_compute_full_version

--- a/linphone-app/cmake_builder/linphone_package/CMakeLists.txt
+++ b/linphone-app/cmake_builder/linphone_package/CMakeLists.txt
@@ -58,7 +58,7 @@ if (SPLITTED_LINPHONE_VERSION_LENGTH GREATER 2)
   list(GET SPLITTED_LINPHONE_VERSION 2 LINPHONE_MICRO_VERSION)
 endif ()
 set(PACKAGE_VERSION "${LINPHONE_VERSION}")
-
+message(STATUS "Versions : ${APP_PROJECT_VERSION}, ${LINPHONE_VERSION}")
 # ==============================================================================
 # Preparing the Linphone SDK bundle.
 # ==============================================================================
@@ -283,7 +283,7 @@ if(${ENABLE_APP_PACKAGING})
 	set(CPACK_PACKAGE_ICON "${CMAKE_CURRENT_SOURCE_DIR}/../../assets/icon.ico")
 	
 	if (APPLE)
-	  set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${APP_PROJECT_VERSION}-mac")
+	  set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${PACKAGE_VERSION}-mac")
 	  set(CPACK_DMG_BACKGROUND_IMAGE "${CMAKE_CURRENT_SOURCE_DIR}/macos/background_dmg.jpg")
 	  configure_file("${CMAKE_CURRENT_SOURCE_DIR}/macos/linphone_dmg.scpt.in" "${CMAKE_CURRENT_BINARY_DIR}/linphone_dmg.scpt" @ONLY)
 	  set(CPACK_DMG_DS_STORE_SETUP_SCRIPT "${CMAKE_CURRENT_BINARY_DIR}/linphone_dmg.scpt")
@@ -291,12 +291,12 @@ if(${ENABLE_APP_PACKAGING})
 	  message(STATUS "Set DragNDrop CPack generator in OUTPUT/Packages")
 	elseif(NOT(WIN32))
 	  set(DO_APPIMAGE YES)
-	  set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${APP_PROJECT_VERSION}")
+	  set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${PACKAGE_VERSION}")
 	  message(STATUS "Set AppImage CPack generator in OUTPUT/Packages")
 	else()
 	  set(CPACK_GENERATOR "NSIS")
 	  set(DO_GENERATOR YES)
-	  set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${APP_PROJECT_VERSION}-win32")
+	  set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${PACKAGE_VERSION}-win32")
 	  string(COMPARE EQUAL ${CPACK_GENERATOR} "NSIS" IS_NSIS)
 	  if (${IS_NSIS})
 	    set(PACKAGE_EXT "exe")
