Add OpenH264 support Update Cisco codec version First Rework on download/extract codec file Ensure to stop download context before sending end signals Replace qt.conf with qt.conf.in to have custom setting that depends of packaging or not

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,6 +86,8 @@ option(ENABLE_TOOLS "Enable tools of SDK" NO)
 option(ENABLE_STRICT "Build with strict compilator flags e.g. -Wall -Werror" NO)
 option(ENABLE_FFMPEG "Build mediastreamer2 with ffmpeg video support." YES)
 option(ENABLE_BUILD_VERBOSE "Enable the build generation to be more verbose" NO)
+option(ENABLE_OPENH264 "Enable the use of OpenH264 codec" YES)
+option(ENABLE_NON_FREE_CODECS "Enable the use of non free codecs" YES)
 
 if(WIN32 OR APPLE)
 else()
@@ -103,7 +105,9 @@ list(APPEND APP_OPTIONS "-DENABLE_TOOLS=${ENABLE_TOOLS}")
 list(APPEND APP_OPTIONS "-DENABLE_STRICT=${ENABLE_STRICT}")
 list(APPEND APP_OPTIONS "-DENABLE_FFMPEG=${ENABLE_FFMPEG}")
 list(APPEND APP_OPTIONS "-DENABLE_BUILD_VERBOSE=${ENABLE_BUILD_VERBOSE}")
-
+list(APPEND APP_OPTIONS "-DENABLE_OPENH264=${ENABLE_OPENH264}")
+list(APPEND APP_OPTIONS "-DENABLE_NON_FREE_CODECS=${ENABLE_NON_FREE_CODECS}")
+	
 if(ENABLE_V4L)
     list(APPEND APP_OPTIONS "-DENABLE_V4L=${ENABLE_V4L}")
 endif()
