Remove openh264 libraries from installation if ENABLE_OPENH264 is used (windows and mac)

--- a/linphone-app/cmake_builder/linphone_package/CMakeLists.txt
+++ b/linphone-app/cmake_builder/linphone_package/CMakeLists.txt
@@ -103,9 +103,17 @@ if (WIN32)
 	if (NOT DEPLOYQT_PROGRAM)
 		message(FATAL_ERROR "Could not find the windeployqt program. Make sure it is in the PATH.")
 	endif ()
-	file(GLOB LIB_FILES "${LINPHONE_OUTPUT_DIR}/${CMAKE_INSTALL_LIBDIR}/*.dll")
+	file(GLOB LIB_FILES "${LINPHONE_OUTPUT_DIR}/${CMAKE_INSTALL_LIBDIR}/*.dll")	
 	install(FILES ${LIB_FILES} DESTINATION "${CMAKE_INSTALL_BINDIR}/")
 	file(GLOB LIB_FILES "${LINPHONE_OUTPUT_DIR}/${CMAKE_INSTALL_BINDIR}/*.dll")
+	if( ENABLE_OPENH264)# Remove openH264 lib from the installation. this codec will be download by user
+		foreach(item ${LIB_FILES})
+			get_filename_component(LIBRARY_FILENAME ${item} NAME)
+			if("${LIBRARY_FILENAME}" MATCHES "^openh264.*.dll$")
+				list(REMOVE_ITEM LIB_FILES ${item})
+			endif()
+		endforeach(item)
+	endif()
 	install(FILES ${LIB_FILES} DESTINATION "${CMAKE_INSTALL_BINDIR}/")
 	file(GLOB EXE_FILES "${LINPHONE_OUTPUT_DIR}/${CMAKE_INSTALL_BINDIR}/*.exe")
 	install(FILES ${EXE_FILES} DESTINATION "${CMAKE_INSTALL_BINDIR}/")
@@ -146,9 +154,15 @@ elseif (APPLE)
   install( CODE "execute_process(COMMAND rsync -a \"${LINPHONE_OUTPUT_DIR}/Frameworks\"  \"\${CMAKE_INSTALL_PREFIX}/${APPLICATION_NAME}.app/Contents/\" )") #Use rsync to bypass symlinks override issues of frameworks
   install(PROGRAMS "${CMAKE_CURRENT_BINARY_DIR}/../../${EXECUTABLE_NAME}" DESTINATION "${APPLICATION_NAME}.app/Contents/MacOS")
   file(GLOB SHARED_LIBRARIES "${LINPHONE_OUTPUT_DIR}/${CMAKE_INSTALL_LIBDIR}/lib*.dylib")
-  foreach (LIBRARY ${SHARED_LIBRARIES})
-    install(FILES "${LIBRARY}" DESTINATION "${APPLICATION_NAME}.app/Contents/Frameworks")
-  endforeach ()
+  if( ENABLE_OPENH264 )# Remove openH264 lib from the installation. this codec will be download by user
+		foreach(item ${SHARED_LIBRARIES})
+			get_filename_component(LIBRARY_FILENAME ${item} NAME)
+			if("${LIBRARY_FILENAME}" MATCHES "^libopenh264.*.dylib$")
+				list(REMOVE_ITEM SHARED_LIBRARIES ${item})
+			endif()
+		endforeach(item)
+  endif()
+  install(FILES "${SHARED_LIBRARIES}" DESTINATION "${APPLICATION_NAME}.app/Contents/Frameworks")
   if (EXISTS "${LINPHONE_OUTPUT_DIR}/${CMAKE_INSTALL_LIBDIR}/mediastreamer")
     file(COPY "${LINPHONE_OUTPUT_DIR}/${CMAKE_INSTALL_LIBDIR}/mediastreamer" DESTINATION "${APPLICATION_NAME}.app/Contents/Resources/${CMAKE_INSTALL_LIBDIR}" USE_SOURCE_PERMISSIONS)
   endif ()
